[package]
name = "floorplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra = "0.33.0"
anyhow = "1.0.83"
rand_chacha = "0.3.1"
arrayref = "0.3.8"

candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-nn = { git = "https://github.com/huggingface/candle.git" }

del-canvas-core = { path="../del-canvas/del-canvas-core"}
del-candle = { path="../del-candle"}
del-geo-core = { path = "../del-geo/del-geo-core"}
del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra"}
del-msh-core = { path = "../del-msh/del-msh-core"}
#　del-geo = "0.1.27"
# del-msh = "0.1.31"


