[package]
name = "floorplan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
nalgebra = "0.33.0"
anyhow = "1.0.86"
rand_chacha = "0.3.1"
arrayref = "0.3.8"
candle-core = "0.6.0"
candle-nn = "0.6.0"
del-geo-core = "0.1.29"
del-geo-nalgebra = "0.1.29"
del-msh-core = "0.1.34"
del-canvas-core = "0.1.1"
del-candle = "0.1.0"


